<resources>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="sing_song">Sing</string>
    <string name="learn">Learn</string>
    <string name="notifications">Notifications</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="tncSign">By logging in you accept all the <u>Terms and Conditions</u> and <u>Privacy Policies</u> of the product</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">250061033071-1r2ulkhf9v8q3gsfe1o773kt7irrrsg3.apps.googleusercontent.com</string>
    <string name="app_name">SurfaceView</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_message">You must grant permission to access camera and external storage to run this application.</string>
    <string name="permission_warning">All permissions are required.</string>
    <string name="sing_a_song">Sing a Song</string>
    <string name="cover">Create a Cover</string>
    <string name="set_thumbnail">Set Thumbnail</string>
    <string name="back_to_genre_selection">Back to Genre Selection</string>
    <string name="upload">Start uploading</string>
    <string name="search_by_song_artist_genre_or_mood">Search by Song, Artist, Genre or Mood</string>
    <string name="musical_knowledge">Test Your Musical Knowledge &amp; Earn XP Points</string>
    <string name="share">Share</string>
    <string name="add_to_my_list">Add to My List</string>
    <string name="add_to_all_my_list">Add all to My List</string>
    <string name="added_to_list">Added to List</string>
    <string name="my_list">My List</string>
    <string name="_4_03">4:03</string>
    <string name="timing_advanced_training">Timing Advanced training</string>
    <string name="collection">Collection</string>
    <string name="improve_your_timing">Improve your Timing</string>
    <string name="question">Which if these artists was not in \'The Bens\' Which if these artists was not in \'The Bens\'?</string>
    <string name="option">Ben Harper</string>
    <string name="dashboard">Dashboard</string>
    <string name="shala">Shala</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="message">Message</string>
    <string name="share_profile">Share User Profile</string>
    <string name="report_user">Report User</string>
    <string name="block_user">Block User</string>
    <string name="report_reason_text">Select a reason for reporting this video</string>
    <string name="report_user_reason_text">Select a reason for reporting this user</string>
    <string name="practice_first_song">Sing or Practice your first song</string>
    <string name="signstr_preferences">Take a crack at one of these</string>
    <string name="block_user_text">Are you sure you want to block this user?</string>
    <string name="delete_cover_text">Are you sure you want to delete this cover? You’ll lose your XP too!</string>
    <string name="delete_your_cover_text">Are you sure you want to delete this cover?</string>
    <string name="delete_your_account_text">Are you sure you want to delete your account?</string>
    <string name="pratice_song_teacher">Practice this song with a teacher</string>
    <string name="clap_to_view_more">Clap to continue watching this video</string>
    <string name="clap_to_view_continue">Clap to continue watching this video</string>
    <string name="genre_title">What do you enjoy singing?</string>
    <string name="watch_full_lesson">Watch Full Lesson</string>
    <string name="username">User</string>
    <string name="hello">Hello</string>
    <string name="level_title">Lvl</string>
    <string name="level_no">22</string>
    <string name="view_detailed_analysis">View Detailed Analysis</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="sing">SING</string>
    <string name="sing_now">SING Now</string>
    <string name="sing_now_small">Sing Now</string>
    <string name="sing_first_song"><b>SING</b>\nyour first song</string>
    <string name="learn_first_lesson"><b>LEARN</b>\nsomething new</string>
    <string name="next_question">Next Question</string>
    <string name="view_all">view all</string>
    <string name="view_all_caps">View All</string>
    <string name="try_again">Try again</string>
    <string name="enter_now">Enter Now</string>
    <string name="your_score">Your Score</string>
    <string name="all_songs">All Songs</string>
    <string name="you_can_earn_more_xp_by">You Can Earn More XP By</string>
    <string name="publishing_songs">Publishing Songs</string>
    <string name="singing_songs">Singing Songs</string>
    <string name="upto">upto</string>
    <string name="record_now">Record Now</string>
    <string name="practice">Practice</string>
    <string name="daily_challenges">Daily Challenges</string>
    <string name="today_s_challenges">Today\&apos;s Challenge</string>
    <string name="recommended_songs">Recommended songs</string>
    <string name="experience">Experience</string>
    <string name="specializations">Specializations</string>
    <string name="career_highlight">Career Highlights</string>
    <string name="qualification">Qualification</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="follow_back">Followed</string>
    <string name="_subscribed">Followed</string>
    <string name="_subscribe">Follow</string>
    <string name="record">Record</string>
    <string name="userName">userName</string>
    <string name="practice_again">Practice Again</string>
    <string name="make_a_cover_of_this_song">Make a cover of this song</string>
    <string name="done">Done</string>
    <string name="abusive">Abusive</string>
    <string name="harrasment">Harassment</string>
    <string name="fake_account">Fake Account</string>
    <string name="spam">Spam</string>
    <string name="hateful">Hateful</string>
    <string name="inappropriate">Inappropriate</string>
    <string name="trending">Trending</string>
    <string name="recent">Recent</string>
    <string name="search_by_song">Search by Song</string>
    <string name="more_features">+MORE FEATURES</string>
    <string name="pro_cost">₹99 per month</string>
    <string name="unlimited_access_text_pro">Unlimited Access to Shala Academy</string>
    <string name="get_unlimited_access_text_pro">Get unlimited access to all lessons by industry experts</string>
    <string name="need_pro_access">You need to be PRO to access this</string>
    <string name="take_learning_up">Take your learning up a notch &amp; unlock access to exclusive content and more!</string>
    <string name="unlimited_access_singstr_academy">Unlimited Access to Shala Academy</string>
    <string name="welcome_pro_text">You are already a PRO member!</string>
    <string name="lets_sing">Even <b>YOU</b> can sing!</string>
    <string name="xp_will_be_credited_after_uploading_n_cover_successfully">XP will be credited after uploading cover successfully</string>
    <string name="your_xp_has_muliplied">Your XP has %1$s!</string>
    <string name="tune">Tune</string>
    <string name="timing">Timing</string>
    <string name="share_lesson_msg">Hey! I found a great singing lessons on singShala! Join the learning wagon : </string>
    <string name="share_message_generic">I\'ve been upping my singing game with singShala! Check it out.. </string>
    <string name="share_lesson_collection_msg">Hey! I found a great collection of singing lessons on singShala! Join the learning wagon : </string>
    <string name="share_own_cover_generic">Hey! Check Out My New Cover Song &amp; Comment to Show Your Support. You Too Can Learn, Sing &amp; Shine on singShala!</string>
    <string name="get_complete_analysis">Get complete analysis of your singing</string>
    <string name="tv_time_song_name"> - Main chhod aayi ghar-baar mera </string>
    <string name="sing_tune_and_time">12:45</string>
    <string name="duration_text">Your cover was viewed for more than<b>\n 28 minutes</b></string>
    <string name="update_app_message">You need to update the app to latest version</string>
    <string name="drag_seekbar">Drag to there position in video which you want to set as thumbnail</string>
    <string name="reset"><u>Reset</u></string>
    <string name="popular">Popular</string>
    <string name="singshala_pro_membership">singShala Pro Membership</string>
    <string name="ftr_leaderboard_desc"><![CDATA[Earn Experience Points (XP) by learning, practicing & publishing songs, and climb up the leaderboard. Ranking 1st on the leaderboard makes you eligible to get rewarded monthly!]]></string>
    <string name="ftr_detailed_analysis_desc"><![CDATA[Record & publish a cover to get detailed feedback on how you performed line-by-line and view your overall score based on tune & timing.]]></string>
    <string name="ftr_audio_exercises_desc">View byte-sized lessons followed by guided ‘Repeat After Me’ format audio exercises that will make you feel like you are in a classroom!</string>
    <string name="ftr_scoring_tech_desc"><![CDATA[Our patented Scoring Tech is one of a kind. It evaluates your singing based on tune & timing and tells you what you are good at and what you need to improve.]]></string>
    <string name="ftr_practice_mode_desc">Enter practice mode in any song and practice in a ‘Sing Along’ format with the artist’s voice to get your tune and timing right.</string>
    <string name="ftr_guided_learning_desc">We will guide you every step on your journey to learn, whether you are recording, practicing, or learning through vocal exercises.</string>
    <string name="ftr_singshala_community_desc"><![CDATA[Be a part of a community of aspiring singers like yourself. Publish your covers, get applauded & praised by our community & mentors, and motivate others to improve. Also, keep an eye out for our exclusive workshops & events.]]></string>
    <string name="challenge_of_the_day">CHALLENGE OF THE DAY</string>
    <string name="trending_covers">Trending Covers</string>
    <string name="view_app_features">View App Features</string>
    <string name="new_lessons">New Lessons</string>
    <string name="practice_for_15_mins_to_get_100xp">Practice for 15 mins to get +100XP</string>
    <string name="your_content_was_viewed_for">Your content was viewed for</string>
    <string name="h">h</string>
    <string name="_50_xp">+50 XP</string>
    <string name="avg_tune_score">Avg Tune Score</string>
    <string name="enhance">Enhance</string>
    <string name="avg_timing_score">Avg Timing Score</string>
    <string name="settings">Settings</string>
    <string name="you_are_already_a_pro_member">You are already a Pro member!</string>
    <string name="app_version">App Version</string>
    <string name="front_camera">Switch to Front Camera</string>
    <string name="rear_camera">Switch to Rear Camera</string>
    <string name="publish_draft_covers">Publish all 12 covers and gain <font color="#5DB427">+1,645 XP</font> Instantly</string>
    <string name="drafts">Drafts</string>
    <string name="get_started">Get Started</string>
    <string name="record_your_first_song">Record your\nfirst song!</string>
    <string name="setting_up_the_stage">Setting up the stage…</string>
    <string name="publish">Publish</string>
    <string name="analyse">Analyse</string>
    <string name="gain">Gain</string>
    <string name="_1_dxp">+%1$dXP</string>
    <string name="create_n_time_age">Created %1$d %2$s ago</string>
    <string name="no_results">No results found</string>
    <string name="oops">OOPS &#x1F61E; </string>
    <string name="improve">Improve</string>
    <string name="singshala_exclusive_features">singShala Exclusive Features</string>
</resources>