<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_page"
    tools:context=".app.onboard.OnBoardSongRecommendationFragment">

    <TextView
        android:id="@+id/tv_record_first_song_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/hhgrotesk_bold"
        android:gravity="center"
        android:text="@string/practice_first_song"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeader1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hkgrotesk_regular"
        android:gravity="center"
        android:text="@string/signstr_preferences"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_record_first_song_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader1"
        app:layout_constraintVertical_bias="1.0"
        app:spanCount="2"
        tools:itemCount="2"
        tools:listitem="@layout/tile_ob_board_song" />

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/bg_rounded_black"
        android:fontFamily="@font/hhgrotesk_bold"
        android:paddingLeft="60dp"
        android:paddingTop="12dp"
        android:paddingRight="60dp"
        android:paddingBottom="12dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>