<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_page"
    tools:context=".app.onboard.OnBoardGenreFragment">

    <ProgressBar
        android:id="@+id/mf_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="80dp"
        android:layout_height="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:progress="25"
        android:progressDrawable="@drawable/signstr_progress_bar"
        app:layout_constraintBottom_toTopOf="@id/tv_record_first_song_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_record_first_song_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/hhgrotesk_bold"
        android:gravity="center"
        android:text="@string/genre_title"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mf_progress_bar" />

    <TextView
        android:id="@+id/tvsubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/hhgrotesk_bold"
        android:gravity="center"
        android:text="Select as many you like"
        android:textAlignment="gravity"
        android:textColor="@color/song_subtitle"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_record_first_song_label" />

    <!--    TODO - use FlexBox layout instead-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSongType"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/tvSkip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvsubHeader"
        app:layout_constraintVertical_bias="0.462"
        tools:itemCount="10"
        tools:listitem="@layout/tile_on_board_option"
        tools:spanCount="3" />

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_rounded_black"
        android:fontFamily="@font/hhgrotesk_bold"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/selector_enable_disable"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:drawablePadding="10dp"
        android:enabled="false"
        android:fontFamily="@font/hhgrotesk_bold"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/next"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>