<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_page"
    android:keepScreenOn="true">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/vvCoverPlayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="26dp"
        android:scaleType="fitXY"
        app:auto_show="false"
        app:controller_layout_id="@layout/layout_exoplayer_controller_view"
        app:layout_constraintBottom_toTopOf="@id/ll_earn_more_xp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_score"
        app:show_buffering="when_playing"
        app:shutter_background_color="@color/transparent"
        app:use_controller="false" />


    <ImageView
        android:id="@+id/icPlayPause"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_pause"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/vvCoverPlayer"
        app:layout_constraintEnd_toEndOf="@+id/vvCoverPlayer"
        app:layout_constraintStart_toStartOf="@+id/vvCoverPlayer"
        app:layout_constraintTop_toTopOf="@+id/vvCoverPlayer" />

    <LinearLayout
        android:id="@+id/ll_score"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="@id/vvCoverPlayer"
        app:layout_constraintStart_toStartOf="@id/vvCoverPlayer"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/hhgrotesk_bold"
            android:gravity="center"
            android:text="@string/your_score"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:padding="5dp">

            <ProgressBar
                android:id="@+id/pbFinal"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/progress_ring_small"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/circular_progress_small"
                tools:progress="61" />

            <TextView
                android:id="@+id/tvFinalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/hhgrotesk_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="61" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_earn_more_xp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_publish">

        <TextView
            android:id="@+id/tv_earn_xps_msg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Earn Additional "
            android:textSize="16dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_more_xp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="17 XP"
            android:textSize="16dp"
            android:fontFamily="@font/hhgrotesk_bold"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/tv_earn_xps_msg_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" after publishing"
            android:textSize="16dp"
            android:textColor="@color/white"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded_grey"
        android:fontFamily="@font/hhgrotesk_bold"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_publish"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded_grey"
        android:backgroundTint="@color/secondary_1"
        android:fontFamily="@font/hhgrotesk_bold"
        android:paddingHorizontal="32dp"
        android:text="@string/publish"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTryAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>